--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maletkhao",
+  "name": "chatbot",
   "version": "1.0.0",
   "description": "An API that maletkhao on Facebook Messenger",
   "repository": "https://github.com/nuieskater/chatbot.git",
