--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "news-api-for-chatfuel",
+    "name": "chatbot",
     "description": "An API that exposes news in the form of a response that is accepted by Chatfuel and is rendered as a Gallery on Facebook Messenger",
     "repository": "https://github.com/nuieskater/chatbot.git",
     "keywords": [
